@@ -190,7 +190,8 @@ void HitTarget::SetDefaults(bool fromMouseClick)
    SetDefaultPhysics(fromMouseClick);
 
    m_d.m_fCollidable = fromMouseClick ? GetRegBoolWithDefault(strKeyName, "Collidable", true) : true;
-   m_d.m_fDisableLighting = dequantizeUnsigned<8>(fromMouseClick ? GetRegIntWithDefault(strKeyName, "DisableLighting", 0) : 0); // stored as uchar for backward compatibility
+   m_d.m_fDisableLightingTop = dequantizeUnsigned<8>(fromMouseClick ? GetRegIntWithDefault(strKeyName, "DisableLighting", 0) : 0); // stored as uchar for backward compatibility
+   m_d.m_fDisableLightingBelow = fromMouseClick ? GetRegStringAsFloatWithDefault(strKeyName, "DisableLightingBelow", 0.f) : 0.f;
    m_d.m_fReflectionEnabled = fromMouseClick ? GetRegBoolWithDefault(strKeyName, "ReflectionEnabled", true) : true;
    m_d.m_RaiseDelay = fromMouseClick ? GetRegIntWithDefault(strKeyName, "RaiseDelay", 100) : 100;
 
@@ -226,8 +227,9 @@ void HitTarget::WriteRegDefaults()
    SetRegValue(strKeyName, "TargetType", REG_DWORD, &m_d.m_targetType, 4);
 
    SetRegValueBool(strKeyName, "Collidable", m_d.m_fCollidable);
-   const int tmp = quantizeUnsigned<8>(clamp(m_d.m_fDisableLighting, 0.f, 1.f));
+   const int tmp = quantizeUnsigned<8>(clamp(m_d.m_fDisableLightingTop, 0.f, 1.f));
    SetRegValueInt(strKeyName, "DisableLighting", (tmp == 1) ? 0 : tmp); // backwards compatible saving
+   SetRegValueFloat(strKeyName, "DisableLightingBelow", m_d.m_fDisableLightingBelow);
    SetRegValueBool(strKeyName, "ReflectionEnabled", m_d.m_fReflectionEnabled);
    SetRegValueInt(strKeyName, "RaiseDelay", m_d.m_RaiseDelay);
 
@@ -696,8 +698,11 @@ void HitTarget::RenderObject(RenderDevice *pd3dDevice)
    pd3dDevice->SetRenderState(RenderDevice::CULLMODE, D3DCULL_CCW);
 #endif
 
-   if (m_d.m_fDisableLighting != 0.f)
-      pd3dDevice->basicShader->SetDisableLighting(m_d.m_fDisableLighting);
+   if (m_d.m_fDisableLightingTop != 0.f || m_d.m_fDisableLightingBelow != 0.f)
+   {
+      const D3DXVECTOR4 tmp(m_d.m_fDisableLightingTop,m_d.m_fDisableLightingBelow, 0.f,0.f);
+      pd3dDevice->basicShader->SetDisableLighting(tmp);
+   }
 
    Texture * const pin = m_ptable->GetImage(m_d.m_szImage);
    if (pin)
@@ -730,8 +735,11 @@ void HitTarget::RenderObject(RenderDevice *pd3dDevice)
 
    pd3dDevice->SetTextureAddressMode(0, RenderDevice::TEX_CLAMP);
    //g_pplayer->m_pin3d.DisableAlphaBlend(); //!! not necessary anymore
-   if (m_d.m_fDisableLighting != 0.f)
-      pd3dDevice->basicShader->SetDisableLighting(0.f);
+   if (m_d.m_fDisableLightingTop != 0.f || m_d.m_fDisableLightingBelow != 0.f)
+   {
+      const D3DXVECTOR4 tmp(0.f,0.f, 0.f,0.f);
+      pd3dDevice->basicShader->SetDisableLighting(tmp);
+   }
 }
 
 void HitTarget::UpdateTarget(RenderDevice *pd3dDevice)
@@ -899,8 +907,9 @@ HRESULT HitTarget::SaveData(IStream *pstm, HCRYPTHASH hcrypthash, HCRYPTKEY hcry
    bw.WriteFloat(FID(RFCT), m_d.m_friction);
    bw.WriteFloat(FID(RSCT), m_d.m_scatter);
    bw.WriteBool(FID(CLDRP), m_d.m_fCollidable);
-   const int tmp = quantizeUnsigned<8>(clamp(m_d.m_fDisableLighting, 0.f, 1.f));
+   const int tmp = quantizeUnsigned<8>(clamp(m_d.m_fDisableLightingTop, 0.f, 1.f));
    bw.WriteInt(FID(DILI), (tmp == 1) ? 0 : tmp); // backwards compatible saving
+   bw.WriteFloat(FID(DILB), m_d.m_fDisableLightingBelow);
    bw.WriteBool(FID(REEN), m_d.m_fReflectionEnabled);
    bw.WriteFloat(FID(PIDB), m_d.m_depthBias);
    bw.WriteBool(FID(ISDR), m_d.m_isDropped);
@@ -1017,7 +1026,11 @@ BOOL HitTarget::LoadToken(int id, BiffReader *pbr)
    {
       int tmp;
       pbr->GetInt(&tmp);
-      m_d.m_fDisableLighting = (tmp == 1) ? 1.f : dequantizeUnsigned<8>(tmp); // backwards compatible hacky loading!
+      m_d.m_fDisableLightingTop = (tmp == 1) ? 1.f : dequantizeUnsigned<8>(tmp); // backwards compatible hacky loading!
+   }
+   else if (id == FID(DILB))
+   {
+      pbr->GetFloat(&m_d.m_fDisableLightingBelow);
    }
    else if (id == FID(PIDB))
    {
@@ -1429,7 +1442,7 @@ STDMETHODIMP HitTarget::put_Collidable(VARIANT_BOOL newVal)
 
 STDMETHODIMP HitTarget::get_DisableLighting(VARIANT_BOOL *pVal)
 {
-   *pVal = (VARIANT_BOOL)FTOVB(m_d.m_fDisableLighting != 0.f);
+   *pVal = (VARIANT_BOOL)FTOVB(m_d.m_fDisableLightingTop != 0.f);
 
    return S_OK;
 }
@@ -1438,7 +1451,7 @@ STDMETHODIMP HitTarget::put_DisableLighting(VARIANT_BOOL newVal)
 {
    STARTUNDO
 
-   m_d.m_fDisableLighting = VBTOF(newVal) ? 1.f : 0;
+   m_d.m_fDisableLightingTop = VBTOF(newVal) ? 1.f : 0;
 
    STOPUNDO
 
@@ -1447,7 +1460,7 @@ STDMETHODIMP HitTarget::put_DisableLighting(VARIANT_BOOL newVal)
 
 STDMETHODIMP HitTarget::get_BlendDisableLighting(float *pVal)
 {
-   *pVal = m_d.m_fDisableLighting;
+   *pVal = m_d.m_fDisableLightingTop;
 
    return S_OK;
 }
@@ -1456,7 +1469,25 @@ STDMETHODIMP HitTarget::put_BlendDisableLighting(float newVal)
 {
    STARTUNDO
 
-   m_d.m_fDisableLighting = newVal;
+   m_d.m_fDisableLightingTop = newVal;
+
+   STOPUNDO
+
+   return S_OK;
+}
+
+STDMETHODIMP HitTarget::get_BlendDisableLightingFromBelow(float *pVal)
+{
+   *pVal = m_d.m_fDisableLightingBelow;
+
+   return S_OK;
+}
+
+STDMETHODIMP HitTarget::put_BlendDisableLightingFromBelow(float newVal)
+{
+   STARTUNDO
+
+   m_d.m_fDisableLightingBelow = newVal;
 
    STOPUNDO
 
