@@ -116,8 +116,9 @@ void Surface::WriteRegDefaults()
    SetRegValueBool(strKeyName, "Visible", m_d.m_fTopBottomVisible);
    SetRegValueBool(strKeyName, "SideVisible", m_d.m_fSideVisible);
    SetRegValueBool(strKeyName, "Collidable", m_d.m_fCollidable);
-   const int tmp = quantizeUnsigned<8>(clamp(m_d.m_fDisableLighting, 0.f, 1.f));
+   const int tmp = quantizeUnsigned<8>(clamp(m_d.m_fDisableLightingTop, 0.f, 1.f));
    SetRegValueInt(strKeyName, "DisableLighting", (tmp == 1) ? 0 : tmp); // backwards compatible saving
+   SetRegValueFloat(strKeyName, "DisableLightingBelow", m_d.m_fDisableLightingBelow);
    SetRegValueBool(strKeyName, "ReflectionEnabled", m_d.m_fReflectionEnabled);
 }
 
@@ -249,7 +250,8 @@ void Surface::SetDefaults(bool fromMouseClick)
    m_d.m_fTopBottomVisible = fromMouseClick ? GetRegBoolWithDefault(strKeyName, "Visible", true) : true;
    m_d.m_fSideVisible = fromMouseClick ? GetRegBoolWithDefault(strKeyName, "SideVisible", true) : true;
    m_d.m_fCollidable = fromMouseClick ? GetRegBoolWithDefault(strKeyName, "Collidable", true) : true;
-   m_d.m_fDisableLighting = dequantizeUnsigned<8>(fromMouseClick ? GetRegIntWithDefault(strKeyName, "DisableLighting", 0) : 0); // stored as uchar for backward compatibility
+   m_d.m_fDisableLightingTop = dequantizeUnsigned<8>(fromMouseClick ? GetRegIntWithDefault(strKeyName, "DisableLighting", 0) : 0); // stored as uchar for backward compatibility
+   m_d.m_fDisableLightingBelow = fromMouseClick ? GetRegStringAsFloatWithDefault(strKeyName, "DisableLightingBelow", 0.f) : 0.f;
    m_d.m_fReflectionEnabled = fromMouseClick ? GetRegBoolWithDefault(strKeyName, "ReflectionEnabled", true) : true;
 }
 
@@ -1050,8 +1052,11 @@ void Surface::RenderWallsAtHeight(RenderDevice* pd3dDevice, const bool fDrop)
    if (m_ptable->m_fReflectionEnabled && (/*m_d.m_heightbottom < 0.0f ||*/ m_d.m_heighttop < 0.0f))
       return;
 
-   if ((m_d.m_fDisableLighting != 0.f) && (m_d.m_fSideVisible || m_d.m_fTopBottomVisible))
-      pd3dDevice->basicShader->SetDisableLighting(m_d.m_fDisableLighting);
+   if ((m_d.m_fDisableLightingTop != 0.f || m_d.m_fDisableLightingBelow != 0.f) && (m_d.m_fSideVisible || m_d.m_fTopBottomVisible))
+   {
+      const D3DXVECTOR4 tmp(m_d.m_fDisableLightingTop,m_d.m_fDisableLightingBelow, 0.f,0.f);
+      pd3dDevice->basicShader->SetDisableLighting(tmp);
+   }
 
    // render side
    if (m_d.m_fSideVisible && !fDrop && (numVertices > 0)) // Don't need to render walls if dropped
@@ -1069,7 +1074,7 @@ void Surface::RenderWallsAtHeight(RenderDevice* pd3dDevice, const bool fDrop)
          if (m_d.m_fTopBottomVisible && m_isDynamic)
             pd3dDevice->SetRenderState(RenderDevice::CULLMODE, D3DCULL_NONE);
          else
-           pd3dDevice->SetRenderState(RenderDevice::CULLMODE, D3DCULL_CCW);
+            pd3dDevice->SetRenderState(RenderDevice::CULLMODE, D3DCULL_CCW);
       }
       Texture * const pinSide = m_ptable->GetImage(m_d.m_szSideImage);
       if (pinSide)
@@ -1137,8 +1142,12 @@ void Surface::RenderWallsAtHeight(RenderDevice* pd3dDevice, const bool fDrop)
    // reset render states
    //g_pplayer->m_pin3d.DisableAlphaBlend(); //!!  not necessary anymore
    //pd3dDevice->SetRenderState(RenderDevice::CULLMODE, D3DCULL_CCW);
-   if ((m_d.m_fDisableLighting != 0.f) && (m_d.m_fSideVisible || m_d.m_fTopBottomVisible))
-      pd3dDevice->basicShader->SetDisableLighting(0.f);
+   if ((m_d.m_fDisableLightingTop != 0.f || m_d.m_fDisableLightingBelow != 0.f) && (m_d.m_fSideVisible || m_d.m_fTopBottomVisible))
+   {
+      const D3DXVECTOR4 tmp(0.f,0.f, 0.f,0.f);
+      pd3dDevice->basicShader->SetDisableLighting(tmp);
+   }
+
 }
 
 void Surface::AddPoint(int x, int y, const bool smooth)
@@ -1272,8 +1281,9 @@ HRESULT Surface::SaveData(IStream *pstm, HCRYPTHASH hcrypthash, HCRYPTKEY hcrypt
    bw.WriteBool(FID(VSBL), m_d.m_fTopBottomVisible);
    bw.WriteBool(FID(SLGA), m_d.m_fSlingshotAnimation);
    bw.WriteBool(FID(SVBL), m_d.m_fSideVisible);
-   const int tmp = quantizeUnsigned<8>(clamp(m_d.m_fDisableLighting, 0.f, 1.f));
+   const int tmp = quantizeUnsigned<8>(clamp(m_d.m_fDisableLightingTop, 0.f, 1.f));
    bw.WriteInt(FID(DILI), (tmp == 1) ? 0 : tmp); // backwards compatible saving
+   bw.WriteFloat(FID(DILB), m_d.m_fDisableLightingBelow);
    bw.WriteBool(FID(REEN), m_d.m_fReflectionEnabled);
    bw.WriteString( FID( MAPH ), m_d.m_szPhysicsMaterial );
    bw.WriteBool( FID( OVPH ), m_d.m_fOverwritePhysics );
@@ -1506,7 +1516,11 @@ BOOL Surface::LoadToken(int id, BiffReader *pbr)
    {
       int tmp;
       pbr->GetInt(&tmp);
-      m_d.m_fDisableLighting = (tmp == 1) ? 1.f : dequantizeUnsigned<8>(tmp); // backwards compatible hacky loading!
+      m_d.m_fDisableLightingTop = (tmp == 1) ? 1.f : dequantizeUnsigned<8>(tmp); // backwards compatible hacky loading!
+   }
+   else if (id == FID(DILB))
+   {
+      pbr->GetFloat(&m_d.m_fDisableLightingBelow);
    }
    else if (id == FID(SVBL))
    {
@@ -2119,7 +2133,7 @@ STDMETHODIMP Surface::put_SlingshotAnimation(VARIANT_BOOL newVal)
 
 STDMETHODIMP Surface::get_DisableLighting(VARIANT_BOOL *pVal)
 {
-   *pVal = (VARIANT_BOOL)FTOVB(m_d.m_fDisableLighting != 0.f);
+   *pVal = (VARIANT_BOOL)FTOVB(m_d.m_fDisableLightingTop != 0.f);
 
    return S_OK;
 }
@@ -2128,7 +2142,7 @@ STDMETHODIMP Surface::put_DisableLighting(VARIANT_BOOL newVal)
 {
    STARTUNDO
 
-   m_d.m_fDisableLighting = VBTOF(newVal) ? 1.f : 0;
+   m_d.m_fDisableLightingTop = VBTOF(newVal) ? 1.f : 0;
 
    STOPUNDO
 
@@ -2137,7 +2151,7 @@ STDMETHODIMP Surface::put_DisableLighting(VARIANT_BOOL newVal)
 
 STDMETHODIMP Surface::get_BlendDisableLighting(float *pVal)
 {
-   *pVal = m_d.m_fDisableLighting;
+   *pVal = m_d.m_fDisableLightingTop;
 
    return S_OK;
 }
@@ -2146,7 +2160,25 @@ STDMETHODIMP Surface::put_BlendDisableLighting(float newVal)
 {
    STARTUNDO
 
-   m_d.m_fDisableLighting = newVal;
+   m_d.m_fDisableLightingTop = newVal;
+
+   STOPUNDO
+
+   return S_OK;
+}
+
+STDMETHODIMP Surface::get_BlendDisableLightingFromBelow(float *pVal)
+{
+   *pVal = m_d.m_fDisableLightingBelow;
+
+   return S_OK;
+}
+
+STDMETHODIMP Surface::put_BlendDisableLightingFromBelow(float newVal)
+{
+   STARTUNDO
+
+   m_d.m_fDisableLightingBelow = newVal;
 
    STOPUNDO
 
