@@ -25,7 +25,8 @@ public:
    float m_elasticity;
    float m_friction;
    float m_scatter;
-   float m_fDisableLighting; // was bool, now 0..1
+   float m_fDisableLightingTop; // was bool, now 0..1
+   float m_fDisableLightingBelow; // 0..1
    bool m_fDroppable;
    bool m_fFlipbook;           // if enabled, dropped walls are not rendered
    bool m_fDisplayTexture;     // in editor
@@ -228,6 +229,8 @@ public:
    STDMETHOD(put_DisableLighting)(/*[in]*/ VARIANT_BOOL newVal);
    STDMETHOD(get_BlendDisableLighting)(/*[out, retval]*/ float *pVal);
    STDMETHOD(put_BlendDisableLighting)(/*[in]*/ float newVal);
+   STDMETHOD(get_BlendDisableLightingFromBelow)(/*[out, retval]*/ float *pVal);
+   STDMETHOD(put_BlendDisableLightingFromBelow)(/*[in]*/ float newVal);
    STDMETHOD(get_ReflectionEnabled)(/*[out, retval]*/ VARIANT_BOOL *pVal);
    STDMETHOD(put_ReflectionEnabled)(/*[in]*/ VARIANT_BOOL newVal);
 
