@@ -965,7 +965,7 @@ BEGIN
     LTEXT           "Blink Inter&val",-1,7,43,41,9
 END
 
-IDD_PROPWALL_VISUALS DIALOGEX 0, 0, 125, 199
+IDD_PROPWALL_VISUALS DIALOGEX 0, 0, 125, 212
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -979,15 +979,17 @@ BEGIN
     COMBOBOX        IDC_MATERIAL_COMBO3,7,136,111,60,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
     CONTROL         "Animate Slingshot",112,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,153,111,10
     CONTROL         "Flipbook (don't show if dropped?)",113,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,164,116,10
-    LTEXT           "Top Image",-1,7,8,35,8
-    LTEXT           "Top Material",-1,7,43,40,8
-    LTEXT           "Side Material",-1,7,102,42,8
-    LTEXT           "Si&de Image",-1,7,78,37,8
-    LTEXT           "Slingshot Material",-1,7,128,56,8
-    LTEXT           "Disable Lighting (0..1)",-1,7,175,74,10
+    LTEXT           "Top Image",IDC_STATIC,7,8,35,8
+    LTEXT           "Top Material",IDC_STATIC,7,43,40,8
+    LTEXT           "Side Material",IDC_STATIC,7,102,42,8
+    LTEXT           "Si&de Image",IDC_STATIC,7,78,37,8
+    LTEXT           "Slingshot Material",IDC_STATIC,7,128,56,8
+    LTEXT           "Disable Lighting (0..1)",IDC_STATIC,7,175,74,10
     EDITTEXT        IDC_BLEND_DISABLE_LIGHTING,82,174,36,12,ES_AUTOHSCROLL
+    LTEXT           "Disable Lig.f.below (0..1)",IDC_STATIC,7,190,77,10
+    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING_FROM_BELOW,82,189,36,12,ES_AUTOHSCROLL
     CONTROL         "Reflection Enabled",IDC_WALL_REFLECT_ENABLED_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,185,76,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,200,76,10
 END
 
 IDD_PROPWALL_PHYSICS DIALOGEX 0, 0, 125, 163
@@ -1823,7 +1825,7 @@ BEGIN
     EDITTEXT        IDC_DEPTH_BIAS,82,119,36,12,ES_AUTOHSCROLL
     LTEXT           "Disable Lighting (0..1)",IDC_STATIC,7,150,74,10
     EDITTEXT        IDC_BLEND_DISABLE_LIGHTING,82,148,36,12,ES_AUTOHSCROLL
-    LTEXT           "Disable Lig.f. below (0..1)",IDC_STATIC,7,165,74,10
+    LTEXT           "Disable Lig.f.below (0..1)",IDC_STATIC,7,165,78,10
     EDITTEXT        IDC_BLEND_DISABLE_LIGHTING_FROM_BELOW,82,163,36,12,ES_AUTOHSCROLL
     LTEXT           "Legacy/Sides",IDC_STATIC,7,179,45,8
     EDITTEXT        101,53,178,20,12,ES_AUTOHSCROLL
@@ -2104,7 +2106,7 @@ BEGIN
     GROUPBOX        "Autocomplete",IDC_STATIC,133,7,94,39
 END
 
-IDD_PROPHITTARGET_VISUALS DIALOGEX 0, 0, 125, 152
+IDD_PROPHITTARGET_VISUALS DIALOGEX 0, 0, 125, 169
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -2122,10 +2124,12 @@ BEGIN
     LTEXT           "Depth Bias",IDC_STATIC,7,104,36,8
     EDITTEXT        IDC_DEPTH_BIAS,73,103,36,12,ES_AUTOHSCROLL
     LTEXT           "Disable Lighting (0..1)",IDC_STATIC,7,119,69,10
-    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING,73,118,36,12,ES_AUTOHSCROLL
-    CONTROL         "Visible",103,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,128,56,10
+    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING,86,118,36,12,ES_AUTOHSCROLL
+    LTEXT           "Disable Lig.f.below (0..1)",IDC_STATIC,7,134,79,10
+    EDITTEXT        IDC_BLEND_DISABLE_LIGHTING_FROM_BELOW,86,133,36,12,ES_AUTOHSCROLL
+    CONTROL         "Visible",103,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,145,56,10
     CONTROL         "Reflection Enabled",IDC_PRIM_REFLECT_ENABLE_CHECK,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,137,73,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,155,73,10
 END
 
 IDD_PROPHITTARGET_POSITION DIALOGEX 0, 0, 125, 78
@@ -2430,6 +2434,7 @@ BEGIN
 
     IDD_PROPWALL_VISUALS, DIALOG
     BEGIN
+        BOTTOMMARGIN, 201
     END
 
     IDD_PROPWALL_PHYSICS, DIALOG
@@ -2661,7 +2666,7 @@ BEGIN
 
     IDD_PROPHITTARGET_VISUALS, DIALOG
     BEGIN
-        BOTTOMMARGIN, 148
+        BOTTOMMARGIN, 165
     END
 
     IDD_PROPHITTARGET_POSITION, DIALOG
@@ -3240,6 +3245,21 @@ BEGIN
 END
 
 IDD_PHYSICS_OPTIONS AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_PROPWALL_VISUALS AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_PROPHITTARGET_VISUALS AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_PROPPRIMITIVE_VISUALS AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
